[package]
name = "codeforces"
version = "0.1.0"
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]
edition = "2018"

[[bin]]
name = "watermelon"
path = "src/4a.rs"

[[bin]]
name = "way-too-long-words"
path = "src/71a.rs"

[[bin]]
name = "team"
path = "src/231a.rs"

[[bin]]
name = "next-round"
path = "src/158a.rs"

[[bin]]
name = "domino-piling"
path = "src/50a.rs"

[[bin]]
name = "bit-plus-plus"
path = "src/282a.rs"

[[bin]]
name = "petya-and-strings"
path = "src/112a.rs"

[[bin]]
name = "beautiful-matrix"
path = "src/263a.rs"
