[package]
name = "codeforces"
version = "0.1.0"
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]
edition = "2018"

[[bin]]
name = "watermelon"
path = "src/4a.rs"

[[bin]]
name = "way-too-long-words"
path = "src/71a.rs"

[[bin]]
name = "team"
path = "src/231a.rs"

[[bin]]
name = "next-round"
path = "src/158a.rs"

[[bin]]
name = "domino-piling"
path = "src/50a.rs"

[[bin]]
name = "bit-plus-plus"
path = "src/282a.rs"

[[bin]]
name = "petya-and-strings"
path = "src/112a.rs"

[[bin]]
name = "beautiful-matrix"
path = "src/263a.rs"

[[bin]]
name = "a-plus-b"
path = "src/99999100.rs"

[[bin]]
name = "theatre-square"
path = "src/1a.rs"

[[bin]]
name = "string-task"
path = "src/118a.rs"

[[bin]]
name = "helpful-maths"
path = "src/339a.rs"

[[bin]]
name = "word-capitalization"
path = "src/281a.rs"

[[bin]]
name = "stones-on-the-table"
path = "src/266a.rs"

[[bin]]
name = "football"
path = "src/96a.rs"

[[bin]]
name = "boy-or-girl"
path = "src/236a.rs"

[[bin]]
name = "young-physicist"
path = "src/69a.rs"

[[bin]]
name = "soldier-and-bananas"
path = "src/546a.rs"

[[bin]]
name = "bear-and-big-brother"
path = "src/791a.rs"

[[bin]]
name = "chat-room"
path = "src/58a.rs"

[[bin]]
name = "tram"
path = "src/116a.rs"

[[bin]]
name = "lucky-division"
path = "src/122a.rs"

[[bin]]
name = "wrong-subtraction"
path = "src/977a.rs"

[[bin]]
name = "elephant"
path = "src/617a.rs"

[[bin]]
name = "twins"
path = "src/160a.rs"