[package]
name = "codeforces"
version = "0.1.0"
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]
edition = "2018"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "watermelon"
path = "src/a/4.rs"

[[bin]]
name = "way-too-long-words"
path = "src/a/71.rs"

[[bin]]
name = "team"
path = "src/a/231.rs"

[[bin]]
name = "next-round"
path = "src/a/158.rs"

[[bin]]
name = "domino-piling"
path = "src/a/50.rs"

[[bin]]
name = "bit-plus-plus"
path = "src/a/282.rs"

[[bin]]
name = "petya-and-strings"
path = "src/a/112.rs"

[[bin]]
name = "beautiful-matrix"
path = "src/a/263.rs"

[[bin]]
name = "a-plus-b"
path = "src/99999100.rs"

[[bin]]
name = "theatre-square"
path = "src/a/1.rs"

[[bin]]
name = "string-task"
path = "src/a/118.rs"

[[bin]]
name = "helpful-maths"
path = "src/a/339.rs"

[[bin]]
name = "word-capitalization"
path = "src/a/281.rs"

[[bin]]
name = "stones-on-the-table"
path = "src/a/266.rs"

[[bin]]
name = "football"
path = "src/a/96.rs"

[[bin]]
name = "boy-or-girl"
path = "src/a/236.rs"

[[bin]]
name = "young-physicist"
path = "src/a/69.rs"

[[bin]]
name = "soldier-and-bananas"
path = "src/a/546.rs"

[[bin]]
name = "bear-and-big-brother"
path = "src/a/791.rs"

[[bin]]
name = "chat-room"
path = "src/a/58.rs"

[[bin]]
name = "tram"
path = "src/a/116.rs"

[[bin]]
name = "lucky-division"
path = "src/a/122.rs"

[[bin]]
name = "wrong-subtraction"
path = "src/a/977.rs"

[[bin]]
name = "elephant"
path = "src/a/617.rs"

[[bin]]
name = "twins"
path = "src/a/160.rs"

[[bin]]
name = "queue-at-the-school"
path = "src/b/266.rs"

[[bin]]
name = "nearly-lucky-number"
path = "src/a/110.rs"

[[bin]]
name = "word"
path = "src/a/59.rs"

[[bin]]
name = "translation"
path = "src/a/41.rs"

[[bin]]
name = "hq9plus"
path = "src/a/133.rs"

[[bin]]
name = "anton-and-danik"
path = "src/a/734.rs"

[[bin]]
name = "taxi"
path = "src/b/158.rs"

[[bin]]
name = "george-and-accommodation"
path = "src/a/467.rs"

[[bin]]
name = "beautiful-year"
path = "src/a/271.rs"

[[bin]]
name = "presents"
path = "src/a/136.rs"

[[bin]]
name = "kefa-and-first-steps"
path = "src/a/580.rs"

[[bin]]
name = "caps-lock"
path = "src/a/131.rs"

[[bin]]
name = "magnets"
path = "src/a/344.rs"

[[bin]]
name = "in-search-of-an-easy-problem"
path = "src/a/1030.rs"

[[bin]]
name = "hulk"
path = "src/a/705.rs"